--- a/j.html
+++ b/j.html
@@ -89,7 +89,7 @@
                - **Functional Foods**: Foods fortified with additional nutrients, probiotics, or antioxidants are gaining popularity. These foods provide health benefits beyond basic nutrition, catering to the rising demand for wellness-oriented diets.
                - **Food Printing and Customization**: 3D food printing allows for personalized shapes, sizes, and even nutrient compositions, creating custom meals that cater to individual dietary preferences and restrictions.
             
-            ### 6. **Reducing Food Waste and Circular Food Systems**
+            ### 8000 **Reducing Food Waste and Circular Food Systems**
                - **Food Waste Reduction**: AI tools are being developed to help reduce food waste by optimizing production and supply chains, while apps like Too Good To Go connect consumers with surplus food from restaurants and stores.
                - **Edible Packaging and Zero-Waste Products**: Edible packaging and biodegradable materials are replacing plastic to reduce packaging waste. Zero-waste grocery stores, where customers bring reusable containers, are also gaining popularity.
                - **Circular Food Systems**: By-products and waste from food production are repurposed or returned to the ecosystem. For example, breweries sell spent grain to bakeries or farms, and food scraps are composted to enrich soil.
