--- a/j.html
+++ b/j.html
@@ -98,7 +98,7 @@
             for healthier options, and a focus on sustainability. Here is an in-depth look at how food is changing and
             where it is headed:
 
-            <strong>Alternative Proteins and Lab-Grown Meat</strong>
+            <strong>ALTERNATE PROTEINS AND LAB GROWN-MEAT</strong>
             <strong>Plant-Based Proteins:</strong> Alternatives to meat, such as those made from peas, soy, and mung
             beans, have become popular due to the reduced environmental impact. Companies like Beyond Meat and
             Impossible Foods are leading the way, creating plant-based products that mimic the taste and texture of
