--- a/j.html
+++ b/j.html
@@ -103,7 +103,7 @@
             beans, have become popular due to the reduced environmental impact. Companies like Beyond Meat and
             Impossible Foods are leading the way, creating plant-based products that mimic the taste and texture of
             meat.
-            <strong>Cultured Meat:</strong> Lab-grown meat, produced from animal cells, is set to become a significant
+            <strong>CULTURED MEAT:</strong> Lab-grown meat, produced from animal cells, is set to become a significant
             part of the food supply. It requires less land and water and has a lower carbon footprint than traditional
             meat. While costly and technically challenging now, improvements in cell-culture technology may make it
             widely accessible.
@@ -111,14 +111,14 @@
             exploring insect-based products as a sustainable protein source that requires less space and water, and
             releases fewer greenhouse gases.
 
-            <strong>Vertical Farming and Urban Agriculture</strong>
+            <strong>VERTICAL FARMING AND URBAN AGRICULTURE </strong>
             <strong>Indoor and Vertical Farms:</strong> To meet urban demand and reduce transportation, vertical farms
             in urban areas are gaining traction. These farms use hydroponics or aeroponics, consuming less water and
             space than traditional farming. Controlled environments also allow year-round production.
-            Urban Agriculture: Rooftop gardens, community gardens, and urban farms make cities self-sufficient by
+            <Strong>Urban Agriculture:</Strong> Rooftop gardens, community gardens, and urban farms make cities self-sufficient by
             producing local food and reducing dependency on rural farms.
 
-            <strong>Smart Agriculture and Precision Farming</strong>
+            <strong>SMART AGRICULTURE AND PRECISION FARMING</strong>
             <strong>Drones and Satellite Imagery:</strong> monitor crop health, irrigation levels, and soil quality,
             while satellite data provides insights on weather patterns and crop health on a larger scale, improving
             yields and resource management.
@@ -126,7 +126,7 @@
             farmers optimize inputs like water and fertilizers. IoT-connected devices automate many aspects of farming,
             improving efficiency and sustainability.
 
-            <strong>Food and Climate Resilience</strong>
+            <strong>FOOD AND CLIMATE RESILIENCE</strong>
             <strong>Climate-Resilient Crops:</strong> Biotechnology enables the development of crops that can withstand
             extreme weather, pests, and diseases. Crops like drought-resistant wheat and flood-tolerant rice are
             essential for future food security.
@@ -134,7 +134,7 @@
             biodiversity, and capture carbon in soil. This approach reverses the damage from intensive farming and
             creates more resilient agricultural systems.
 
-            <strong>Personalized Nutrition and Food Technology</strong>
+            <strong>PERSONALIZED NUTRITION AND FOOD TECHONLOGY</strong>
             <strong> Diets:</strong> Advances in genomics and nutrigenomics offer personalized nutrition plans based on
             individual genetic profiles, helping people meet dietary needs and manage health issues more effectively.
             <strong>Functional Foods:</strong> Foods fortified with additional nutrients, probiotics, or antioxidants
