--- a/j.html
+++ b/j.html
@@ -96,53 +96,54 @@
         <h2>The Future of Food</h2>
         <p>The future of food is rapidly evolving, shaped by new technologies, environmental challenges, consumer demand
             for healthier options, and a focus on sustainability. Here is an in-depth look at how food is changing and
-            where it is headed:
+            where it is headed:<br><br>
 
-            <strong>ALTERNATE PROTEINS AND LAB GROWN-MEAT</strong>
+            <strong>ALTERNATE PROTEINS AND LAB GROWN-MEAT</strong><br>
             <strong>Plant-Based Proteins:</strong> Alternatives to meat, such as those made from peas, soy, and mung
             beans, have become popular due to the reduced environmental impact. Companies like Beyond Meat and
             Impossible Foods are leading the way, creating plant-based products that mimic the taste and texture of
             meat.
-            <strong>CULTURED MEAT:</strong> Lab-grown meat, produced from animal cells, is set to become a significant
+            <strong>Cultured Meat:</strong> Lab-grown meat, produced from animal cells, is set to become a significant
             part of the food supply. It requires less land and water and has a lower carbon footprint than traditional
             meat. While costly and technically challenging now, improvements in cell-culture technology may make it
-            widely accessible.
+            widely accessible.<br>
             <strong>Insect Protein:</strong> In many cultures, insects are a staple source of protein. Companies are
             exploring insect-based products as a sustainable protein source that requires less space and water, and
-            releases fewer greenhouse gases.
+            releases fewer greenhouse gases.<br><br>
 
-            <strong>VERTICAL FARMING AND URBAN AGRICULTURE </strong>
+            <strong>VERTICAL FARMING AND URBAN AGRICULTURE </strong><br>
             <strong>Indoor and Vertical Farms:</strong> To meet urban demand and reduce transportation, vertical farms
             in urban areas are gaining traction. These farms use hydroponics or aeroponics, consuming less water and
-            space than traditional farming. Controlled environments also allow year-round production.
-            <Strong>Urban Agriculture:</Strong> Rooftop gardens, community gardens, and urban farms make cities self-sufficient by
-            producing local food and reducing dependency on rural farms.
+            space than traditional farming. Controlled environments also allow year-round production.<br>
+            <Strong>Urban Agriculture:</Strong> Rooftop gardens, community gardens, and urban farms make cities
+            self-sufficient by
+            producing local food and reducing dependency on rural farms.<br><br>
 
-            <strong>SMART AGRICULTURE AND PRECISION FARMING</strong>
+            <strong>SMART AGRICULTURE AND PRECISION FARMING</strong><br>
             <strong>Drones and Satellite Imagery:</strong> monitor crop health, irrigation levels, and soil quality,
             while satellite data provides insights on weather patterns and crop health on a larger scale, improving
-            yields and resource management.
+            yields and resource management. <br>
             <strong>IoT and Sensors:</strong> Sensors monitor soil moisture, temperature, and nutrient levels, helping
             farmers optimize inputs like water and fertilizers. IoT-connected devices automate many aspects of farming,
-            improving efficiency and sustainability.
+            improving efficiency and sustainability. <br><br>
 
-            <strong>FOOD AND CLIMATE RESILIENCE</strong>
+            <strong>FOOD AND CLIMATE RESILIENCE</strong> <br>
             <strong>Climate-Resilient Crops:</strong> Biotechnology enables the development of crops that can withstand
             extreme weather, pests, and diseases. Crops like drought-resistant wheat and flood-tolerant rice are
-            essential for future food security.
+            essential for future food security. <br>
             <strong>Regenerative Agriculture:</strong> Farmers are adopting practices that enhance soil health, increase
             biodiversity, and capture carbon in soil. This approach reverses the damage from intensive farming and
-            creates more resilient agricultural systems.
+            creates more resilient agricultural systems. <br><br> 
 
-            <strong>PERSONALIZED NUTRITION AND FOOD TECHONLOGY</strong>
+            <strong>PERSONALIZED NUTRITION AND FOOD TECHONLOGY</strong> <br>
             <strong> Diets:</strong> Advances in genomics and nutrigenomics offer personalized nutrition plans based on
-            individual genetic profiles, helping people meet dietary needs and manage health issues more effectively.
+            individual genetic profiles, helping people meet dietary needs and manage health issues more effectively. <br>
             <strong>Functional Foods:</strong> Foods fortified with additional nutrients, probiotics, or antioxidants
             are gaining popularity. These foods provide health benefits beyond basic nutrition, catering to the rising
-            demand for wellness-oriented diets.
+            demand for wellness-oriented diets. <br>
             <strong>Food Printing and Customization:</strong> 3D food printing allows for personalized shapes, sizes,
             and even nutrient compositions, creating custom meals that cater to individual dietary preferences and
-            restrictions.
+            restrictions. <br>
 
 
 
