--- a/website.html
+++ b/website.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alternative Food Resources</title>
-    <link rel="stylesheet" href="j.css">
+    <link rel="stylesheet" href="website.css">
 </head>
 
 <body>
